--- a/src/sections/products/ProductCard.module.scss
+++ b/src/sections/products/ProductCard.module.scss
@@ -3,6 +3,7 @@
     max-width: 500px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     overflow: hidden; 
     background-color: white;
@@ -18,7 +19,7 @@
     width: 70%;
     border-radius: 0 22px 22px 0px;
     text-align: center;
-    background-color: rgb(0, 130, 99);
+    background-color: #164E63;
     color: white;
     font-size: 80%;
     font-weight: bold;
@@ -60,6 +61,7 @@
   }
 
   &__body {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -80,22 +82,10 @@
     border-radius: 5px;
   }
 
-  &__deliveryIsFree {
-    font-weight: bold;
-    background-color: #c4f1ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #01bcf3;
-    border-radius: 3px;
-    width: 90%;
-    margin: auto;
-  }
-
   &__offerDay{
     background-color: #e6f7ee;
     border-radius: 3px;
-    color: #00a650;
+    color: #41CBBF;
     font-size: 15px;
     font-weight: bolder;
     height: 18px;
